# spectrace

./: .gitignore  LICENSE  README.md  normalized_rule_schema_v1.1.md  pyproject.toml
contexts/: 1-1.md  2-1.md  2-2.md  2.md  4-1-2.md  4-1-3.md  4-1-4.md  4-2-1.md  4-2-10.md  4-2-11-1.md  4-2-11-3.md  4-2-11.md  4-2-2.md  4-2-3.md  4-2-5.md  4-2-6.md  4-2-7.md  4-2-8-1.md  4-2-8-2.md  4-2-9.md  4-3-1.md  4-3-2.md  4-4-2-1.md  4-4-2-2.md  4-4-2-3.md  4-4-2-4.md  4-4-2.md  4-4-3.md  4-4-4.md  4-5.md  4-6-1.md  4-6-2.md  4-6-3.md  4.md  5-1.md  5-2.md  5-3.md  5-4.md  5-5.md  5.md  (+12 more)
examples/: sample_context.md
locations/: rfc8446-2-1-server-must-abort-no-common-params.json  rfc8446-2-2-oob-psk-must-provision-identity-and-hash.json  rfc8446-2-2-should-supply-key-share-with-psk.json  rfc8446-2-app-data-must-not-precede-finished.json  rfc8446-2-server-key-share-must-be-in-client-group.json  rfc8446-4-1-1-R01.json  rfc8446-4-1-1-R02.json  rfc8446-4-1-1-R03.json  rfc8446-4-1-1-R04.json  rfc8446-4-1-2-R01.json  rfc8446-4-1-2-R02.json  rfc8446-4-1-2-R03.json  rfc8446-4-1-2-R04.json  rfc8446-4-1-2-R05.json  rfc8446-4-1-2-R06.json  rfc8446-4-1-2-R07.json  rfc8446-4-1-2-R08.json  rfc8446-4-1-2-R09.json  rfc8446-4-1-2-R10.json  rfc8446-4-1-2-R11.json  rfc8446-4-1-2-R12.json  rfc8446-4-1-2-R13.json  rfc8446-4-1-2-R14.json  rfc8446-4-1-2-R15.json  rfc8446-4-1-2-R16.json  rfc8446-4-1-3-check-hrr-random.json  rfc8446-4-1-3-cipher-suite-not-offered.json  rfc8446-4-1-3-client-abort-downgrade-match.json  rfc8446-4-1-3-client-check-downgrade-sentinel.json  (+253 more)
results/: _summary.json  (+33 more)
(+76 files in other folders)
