[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectrace"
version = "0.1.0"
description = "Structured LLM pipeline for RFC conformance checking"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-c>=0.21.0",
]

[project.scripts]
spectrace = "spectrace.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/spectrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
